poceo rad na testimonialsima

--- a/vjezba.html
+++ b/vjezba.html
@@ -141,6 +141,76 @@
             </div>
         </div>
     </section>
+
+    <section class="testimonials" id="testimonials">
+        <div class="testimonials-box">
+            <h2 class="heading">Testimonials</h2>
+
+            <div class="wrapper">
+                <div class="testimonials-item">
+                    <img src="1.jpg" alt="">
+                    <h2>Marija</h2>
+                    <div class="rating">
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                         Id, sit aut. Quis soluta tenetur a reiciendis dolores
+                          harum alias assumenda quo nam, vitae, suscipit ipsum repudiandae, et minima labore consequuntur!</p>
+                </div>
+
+                <div class="testimonials-item">
+                    <img src="2.jpg" alt="">
+                    <h2>Ana</h2>
+                    <div class="rating">
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                         Id, sit aut. Quis soluta tenetur a reiciendis dolores
+                          harum alias assumenda quo nam, vitae, suscipit ipsum repudiandae, et minima labore consequuntur!</p>
+                </div>
+
+                <div class="testimonials-item">
+                    <img src="3.jpg" alt="">
+                    <h2>Marko</h2>
+                    <div class="rating">
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                         Id, sit aut. Quis soluta tenetur a reiciendis dolores
+                          harum alias assumenda quo nam, vitae, suscipit ipsum repudiandae, et minima labore consequuntur!</p>
+                </div>
+
+                <div class="testimonials-item">
+                    <img src="4.jpg" alt="">
+                    <h2>Bruno</h2>
+                    <div class="rating">
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                         Id, sit aut. Quis soluta tenetur a reiciendis dolores
+                          harum alias assumenda quo nam, vitae, suscipit ipsum repudiandae, et minima labore consequuntur!</p>
+                </div>
+            </div>
+        </div>
+
+
+    </section>
     
     <script src="script.js"></script>
 </body>
